--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
-    "semi": false,
-    "tabWidth": 4,
-    "printWidth": 100,
+    "semi": true,
+    "tabWidth": 2,
+    "printWidth": 110,
     "singleQuote": false,
     "trailingComma": "es5",
     "jsxSingleQuote": false,
